syntax = "proto3";

option csharp_namespace = "	GrpcMessageServer";

package message;

service Message {
  rpc GetMessage (stream MessageRequest) returns (stream MessageResponse) {}
}

message MessageRequest {
  string name = 1;
  string message = 2;
}

message MessageResponse {
  string message = 1;
}
